refactor: latest hono-api 1.0.8
